# recall-cs

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.do/: app.yaml
alembic/: env.py
alembic/versions/: c5d3e7f8a1b2_add_conversations_and_chat_messages.py  e2f3a4b5c6d7_add_refresh_jti_to_users.py  f8a9b0c1d2e3_add_pgvector_document_chunk_embeddings.py
docs/: SETUP.md
eval/generation/: batch_generate.py
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  vercel.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  tutor.ts  types.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/auth/: AuthLayout.tsx  auth-layout.css
frontend/src/components/layout/: AppShell.tsx  layout.css
frontend/src/hooks/: usePageTitle.ts
frontend/src/routes/: DashboardPage.tsx  LandingPage.tsx  LearningPathPage.tsx  LoginPage.tsx  ReviewPage.tsx  ReviewSetupPage.tsx  ReviewSummaryPage.tsx  SignupPage.tsx  TutorPage.tsx  dashboard.css  landing.css  learning-path.css  tutor.css
scripts/: check_db.py  entrypoint.sh  seed_cards.py
src/: config.py
src/api/: deps.py  main.py  models.py  routes.py  tutor_models.py  tutor_routes.py
src/auth/: clerk_verify.py  dependencies.py  routes.py  schemas.py  service.py
src/db/: models.py
src/llm/: client.py
src/rag/: __init__.py  config.py  hybrid.py  pgvector_dense.py
src/skills/: grader.py  quiz_service.py  schemas.py  session_service.py  swot.py
tests/: __init__.py  test_pgvector_dense.py
