[project]
name = "recall-cs"
version = "0.1.0"
description = "End-to-end RAG system with agentic orchestration for technical Q&A"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
    "pytest>=9.0.3",
    "rank-bm25>=0.2.2",
    "requests>=2.33.0",
    "sentence-transformers>=3.0.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "bcrypt>=3.2.2",
    "pgvector>=0.3.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "pyjwt[crypto]>=2.10.0",
    "cryptography>=46.0.7",
    "urllib3>=2.7.0",
    "pyasn1>=0.6.3",
    "pygments>=2.20.0",
    "mako>=1.3.12",
    "ecdsa>=0.19.2",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
generation = [
    "transformers>=5.0.0rc3",
]
cpu = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]
cu130 = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu130" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
]
